# wasm-semantics

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  META  Makefile  README.md  TODO.md  auxil.md  binary.md  build  convert.py  core.md  data.md  elrond-configuration.md  elrond-impl.md  elrond-lemmas.md  elrond-wasm.md  elrond.md  flake.nix  kbuild.toml  kwasm  kwasm-lemmas.md  map-int-to-bytes.k  numeric.md  preprocessor.py  script.sh  slow-krun-haskell.sh  test  test.md  wasm-syntax.k  wasm-syntax.md  wasm-text.md  wasm.k  wasm.k.patch  wasm.md  wrc20.md  wrc20.test
.github/workflows/: master-push.yml  test-pr.yml  update-version.yml
binary-parser/: kwasm_ast.py  test.py  test_kwasm_ast.py  wasm2kast.py
data/: int-type.k  list-int.k  list-ref.k  map-int-to-int.k  map-int-to-val.k  mutable-bytes.k  sparse-bytes.k  tools.k
data/summaries/: summaries.k
media/: 201803-ethcc.md  201903-chalmers.md  201903-edcon.md  201903-presentation-chalmers.md  201903-presentation-edcon.md  201903-report-chalmers.md  201906-presentation-wasm-on-blockchain.md  201910-presentation-devcon.md  201912-dlab-reverse-bytes-blog.md  202001-presentation-dlab.md  202001-presentation-thesis-chalmers.md  citations.md
media/201803-ethcc/: presentation.md
media/berlin-demo/: dead-code-elimination-spec.wast  div1-spec.k  div2-spec.k  div3-spec.k  div4-spec.k  example-execution.wast  pre-run.sh
media/demo/: .gitignore  example_memory.wast  memory-spec.k  wasm.k
media/graph/: community_consensus_full.m4  names.gv  security_full.m4
media/memory-demo/: memory-spec.k  wasm.k
nix/: README.md
nix/kwasm/: default.nix  test.nix
nix/kwasm-pyk/: build-systems-overlay.nix  default.nix
nix/kwasm-source/: default.nix
nix/resources/: mypy-extensions-pyproject.toml.patch
package/: version  version.sh
presentation/: presentation.md
pykwasm/: .cruft.json  .flake8  Makefile  README.md  flake.nix  pyproject.toml
pykwasm/nix/pykwasm/: default.nix
pykwasm/src/: wasm
pykwasm/src/pykwasm/: __main__.py  call.py  deploy_contract.py  fund_acct.py  kwasm_ast.py  mkacct.py  run_wasm.py  wasm2kast.py  wasm2kore.py
pykwasm/src/pykwasm/binary/: combinators.py  floats.py  indices.py  instructions.py  integers.py  module.py  types.py  utils.py
pykwasm/src/pykwasm/kdist/: auxil.md  data.md  plugin.py
pykwasm/src/pykwasm/kdist/data/: int-type.k
pykwasm/src/pykwasm/kdist/wasm-semantics/: auxil.md  data.md  kwasm-lemmas.md  numeric.md  test.md  ulm-wasm.md  wasm-data.md  wasm-text.md  wasm.md
pykwasm/src/pykwasm/kdist/wasm-semantics/data/: int-type.k  list-int.k  list-ref.k  map-int-to-int.k  sparse-bytes.k  tools.k
pykwasm/src/pykwasm/kdist/wasm-semantics/symbolic/: ceils-syntax.k  ceils.k  symbolic.md  wasm-lemmas.md
pykwasm/src/pykwasm/kdist/wasm-semantics/symbolic/int/: arithmetic-normalization.md  bit-normalization.md  common.md  symbolic.md
pykwasm/src/pykwasm/kdist/wasm-semantics/symbolic/sparse-bytes/: common-sparse-bytes-lemmas.md  get-bytes-range-lemmas.md  get-range-lemmas.md  replace-at-lemmas.md  set-range-lemmas.md  sparse-bytes-lemmas-basic.md  sparse-bytes-lemmas.md  substr-sparse-bytes-lemmas.md
pykwasm/src/pykwasm/kdist/wasm-semantics/wasm-data/: list-int.k  list-ref.k  sparse-bytes.k
pykwasm/src/pykwasm/scripts/: convert.py  kwasm.py  kwasm.sh  preprocessor.py
pykwasm/src/tests/: conftest.py
pykwasm/src/tests/integration/: test_binary_parser.py
pykwasm/src/tests/integration/binary/: basic-features.wat  instrs.wat  spec_elem_0.wat  spec_elem_1.wat  spec_elem_2.wat  tables.wat
pykwasm/src/tests/unit/: test_binary_parser.py  test_kwasm_ast.py  test_wasm2kast.py
scripts/: compile-contract  compress-bytes.py  filter-identifiers.py  kast-compress.sh  kast.kscript  normalize-maps.py  pyproject.toml  run-dev-ulm  ulm-load-lang
scripts/compress_bytes/: compress_bytes.py  execution.py  functions.py  kast.py  types.py
test/: config.xml
tests/: failing.proofs  success-haskell.out  success-java.out  success-k.out  success-llvm.out  success-ocaml.out  success.out
tests/advanced/: block.wast  crash.wast
tests/bad-proofs/: mod-on-negative-spec.k  mod-on-negative-spec.k.expected
tests/binary/: delegation.wat  funcs.wat  instrs.wasm  instrs.wat  types.wat
tests/conformance/: look_for_supported.sh  unparseable.txt  unsupported-llvm.txt  unsupported-ocaml.txt
tests/core/: func.wast
tests/core-lite/: README.md  f32.wast  f32_bitwise.wast  f64_bitwise.wast  i64.wast  if.wast  loop.wast
tests/interactive/: arithmetic.wast  arithmetic.wast.out  bitwise.wast  bitwise.wast.out  comparison.wast  comparison.wast.out  constants.wast  constants.wast.out  success.out
tests/official/: look_for_supported.sh  unparseable.txt  unsupported.txt
tests/proofs/: functions-spec.k  locals-spec.k  loop-sum-spec.k  loops-spec.k  loops-symbolic-spec.k  memory-abstract-type-lemmas.k  memory-abstract-type-spec.k  memory-concrete-type-spec.k  memory-spec.k  memory-symbolic-type-spec.k  mutable-bytes-defn.k  mutable-bytes-spec.k  simple-arithmetic-spec.k  simple-spec.k  wrc20-spec.k
tests/simple/: arithmetic.wast  binary-c.wast  binary.wast  bitwise.wast  block-c.wast  comments.wast  comparison.wast  constants.wast  control-flow.wast  conversion.wast  data.wast  desugaring.wast  export.wast  f32_cmp-c.wast  f64-c.wast  f64_cmp-c.wast  fac-c.wast  folded.wast  functions.wast  functions_call.wast  functions_invoke.wast  globals.wast  i32-c.wast  i64-c.wast  i64.wast  identifiers.wast  if-c.wast  imports.wast  integers.wast  linking-c.wast  linking.wast  locals.wast  memory.wast  memory.wast.draft  modules.wast  polymorphic.wast  preprocessor.wast  stack-c.wast  start.wast  success.out  (+6 more)
tests/ulm/erc20/rust/: Cargo.toml  README.md  build.sh
tests/ulm/erc20/rust/src/: address.rs  assertions.rs  balance.rs  bytes.rs  decoder.rs  encoder.rs  encoding_tests.rs  erc20.rs  erc20_dispatcher.rs  erc20_tests.rs  lib.rs  predicate.rs  storage.rs  storage_tests.rs  u256.rs  ulm.rs  ulm_hooks.rs  unsigned.rs  unsigned_tests.rs  value_mapper.rs
tmp/: bytes.json
(+87 files in other folders)
