[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pykwasm"
version = "0.1.107"
description = ""
authors = [
    "Runtime Verification, Inc. <contact@runtimeverification.com>",
]

[tool.poetry.scripts]
deploy = "pykwasm.deploy_contract:main"
wasm = "pykwasm.run_wasm:main"
wasm2kore = "pykwasm.wasm2kore:main"
wasm2kast = "pykwasm.wasm2kast:main"
kwasm = "pykwasm.scripts.kwasm:main"
kwasm-convert = "pykwasm.scripts.convert:main"
kwasm-preprocess = "pykwasm.scripts.preprocessor:main"

[tool.poetry.plugins.kdist]
wasm-semantics = "pykwasm.kdist.plugin"

[tool.poetry.dependencies]
python = "^3.10"
cytoolz = "^0.12.1"
numpy = "^1.24.2"
kframework = "7.1.191"
py-wasm = { git = "https://github.com/runtimeverification/py-wasm.git", tag="0.2.1" }
web3 = "7.6.0"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-quotes = "*"
flake8-type-checking = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
pyupgrade = "*"

[tool.isort]
profile = "black"
line_length = 120
skip=["wasm"]

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
# TODO fix type errors
exclude = [
    'src/pykwasm/wasm2kast\.py',
    'src/pykwasm/wasm2kore\.py',
    'src/pykwasm/run_wasm\.py',
    'src/pykwasm/deploy_contract\.py',
    'src/wasm/*',
    'src/tests/unit/test_wasm2kast\.py',
]
