[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pykwasm"
version = "0.1.133"
description = ""
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "kframework>=7.1.268",
    "py-wasm@git+https://github.com/runtimeverification/py-wasm.git@0.2.1"
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
wasm2kast = "pykwasm.wasm2kast:main"
kwasm = "pykwasm.scripts.kwasm:main"
kwasm-convert = "pykwasm.scripts.convert:main"
kwasm-preprocess = "pykwasm.scripts.preprocessor:main"
kwasm-kdist = "pyk.kdist.__main__:main"

[project.entry-points.kdist]
wasm-semantics = "pykwasm.kdist.plugin"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pyupgrade",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120
skip=["wasm"]

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
# TODO fix type errors
exclude = [
    'src/pykwasm/wasm2kast\.py',
    'src/wasm/*',
    'src/tests/unit/test_wasm2kast\.py',
]
